--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: ruby
 rvm:
   - 2.3.1
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database green_gables_test;' -U postgres
+  - psql -c 'create database green_gables_heroku;' -U postgres
