--- a/test/fixtures/suites.yml
+++ b/test/fixtures/suites.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  description: MyString
+  name: first suite
   price: 1
 
 two:
-  name: MyString
-  description: MyString
-  price: 1
+  name: second suite
+  price: 2
