--- a/test/fixtures/clients.yml
+++ b/test/fixtures/clients.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  full_name: MyString
-  email_address: MyString
-  phone_number: MyString
+  full_name: client one
+  email_address: clientone@email.com
+  phone_number: 8675309
 
 two:
-  full_name: MyString
-  email_address: MyString
-  phone_number: MyString
+  full_name: client two
+  email_address: clientwo@email.com
+  phone_number: 3098675
