--- a/test/fixtures/reservations.yml
+++ b/test/fixtures/reservations.yml
@@ -7,7 +7,7 @@ one:
   end_date: 2016-08-14 12:08:57
   price: MyString
   number_of_people: 1
-  comments: MyString
+  comment: MyString
   accepted: false
 
 two:
@@ -17,5 +17,5 @@ two:
   end_date: 2016-08-14 12:08:57
   price: MyString
   number_of_people: 1
-  comments: MyString
+  comment: MyString
   accepted: false
