--- a/test/fixtures/reservations.yml
+++ b/test/fixtures/reservations.yml
@@ -19,3 +19,13 @@ two:
   number_of_people: 1
   comment: MyString
   accepted: false
+
+three:
+  suite_id: MyString
+  client_id: MyString
+  start_date: 2016-08-14 12:08:57
+  end_date: 2016-08-14 12:08:57
+  price: MyString
+  number_of_people: 1
+  comment: MyString
+  accepted: true
