--- a/test/fixtures/reservations.yml
+++ b/test/fixtures/reservations.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  suite_id: MyString
-  client_id: MyString
+  suite_id: 2
+  client_id: 1
   start_date: 2016-08-14 12:08:57
   end_date: 2016-08-14 12:08:57
   price: MyString
@@ -11,8 +11,8 @@ one:
   accepted: false
 
 two:
-  suite_id: MyString
-  client_id: MyString
+  suite_id: 2
+  client_id: 1
   start_date: 2016-08-14 12:08:57
   end_date: 2016-08-14 12:08:57
   price: MyString
@@ -21,8 +21,8 @@ two:
   accepted: false
 
 three:
-  suite_id: MyString
-  client_id: MyString
+  suite_id: 1
+  client_id: 2
   start_date: 2016-08-14 12:08:57
   end_date: 2016-08-14 12:08:57
   price: MyString
